# stocker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.base  Makefile  README.md  alembic.ini  build.sh  docker-compose.backtest.yml  docker-compose.override.yml  docker-compose.yml  dynamic_test_cold_boot.py  dynamic_test_month.py  mirakuru-3.0.2-py3-none-any.whl  port_for-1.0.0-py3-none-any.whl  pytest-9.1.0-py3-none-any.whl  pytest_postgresql-8.1.0-py3-none-any.whl  verify_run_button.py
_archive/: README.md
db/: init.sql
docs/: architecture.md  backtester-v2-plan.md  build-phases.md  data-sources.md  evaluator.md  first-claude-task.md  llm-boundaries.md  monolith-plan.md  risk-safety-rules.md  service-boundaries.md  testing.md
screenshots/: playwright_report.json
scripts/: deploy.sh  integration_test.sh  redeploy.sh  run-tests.sh  smoke-image-imports.sh  up.sh
shared/: pyproject.toml
shared/stock_strategy_shared/: ai_universe.py  capacity.py  config_values.py  corporate_actions.py  db.py  drawdown.py  factor_registry.py  filelock.py  health_record.py  investability.py  loader.py  order_status.py  rate_limit.py  tracing.py  trading_tz.py
shared/stock_strategy_shared/broker/: __init__.py  alpaca.py  base.py  factory.py  ibkr.py
shared/stock_strategy_shared/schemas/: factors.py  strategy.py
shared/stock_strategy_shared/strategy_engine/: __init__.py  rank.py
strategies/: momentum_rotation_v1.yaml  momentum_rotation_v2.yaml  momentum_rotation_v3.yaml  quality_core_v1.vetter_prompt.txt  quality_core_v1.yaml  quality_momentum_v1.yaml  (+1 more)
(+538 files in other folders)
